--- a/exercicios/Aula 15-ex/ex017.html
+++ b/exercicios/Aula 15-ex/ex017.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>Exercicio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <header>
-            <h1>Hora do Dia</h1>
+            <h1>Tabuada</h1>
         </header>
         <section>
-            <div id="hrs">Agora são ? horas</div>
-            <div id="img"></div>
+            <div>
+                <p>Número: <input type="number" name="num" id="inum">
+                    <input type="button" value="Gerar Tabuada" onclick="gerar()">
+                </p>
+            </div>
+            <div id=tabuada>
+                Digite um número acima
+            </div>
         </section>
         <footer>
             <p>Criado por <strong>Alan Nunes</strong> durante o <Strong>CursoemVideo</Strong></p>
         </footer>
-        <script src="pratica2.js"></script>
+        <script src="ex017.js"></script>
 </body>
 </html>
