--- a/exercicios/Aula 14-ex2/ex017.html
+++ b/exercicios/Aula 14-ex2/ex017.html
@@ -16,8 +16,10 @@
                     <input type="button" value="Gerar Tabuada" onclick="gerar()">
                 </p>
             </div>
-            <div id=tabuada>
-                Digite um número acima
+            <div>
+                <select name="lista" id="ilista"  size="10">
+                    <option>Digite um numero acima.</option>
+                </select>
             </div>
         </section>
         <footer>
