Analisador de números.

--- a/exercicios/Aula 16-ex/ex18.html
+++ b/exercicios/Aula 16-ex/ex18.html
@@ -19,8 +19,8 @@
 
             </select>
             <p><input type="button" value="Finalizar" id="Finalizar"></p>
-            <div id="teste">
-                oi
+            <div id="result">
+            
             </div>
         </section>
         <footer>
